# amuse

./: .gitattributes  .gitignore  README.md  pyproject.toml
aggregation/: __init__.py  methods.py
configs/: default.yaml
data/: __init__.py  sentences.py
eval/: __init__.py  metrics.py  run_meta_eval.py
evaluators/: __init__.py  base.py  cache.py  openai_compat.py
prompts/: sentence_faithfulness_v1.txt  sentence_faithfulness_v2.txt
results/: meta_eval_longtable.aggrefact_cnn.tex  meta_eval_longtable.aggrefact_other_multi.tex  meta_eval_longtable.diversumm.tex  meta_eval_longtable.halueval.tex  meta_eval_summary.Qwen_Qwen3-32B.aggrefact_cnn.csv  meta_eval_summary.Qwen_Qwen3-32B.aggrefact_other_multi.csv  meta_eval_summary.Qwen_Qwen3-32B.diversumm.csv  meta_eval_summary.Qwen_Qwen3-32B.halueval.csv  meta_eval_summary.Qwen_Qwen3-4B.aggrefact_cnn.csv  meta_eval_summary.Qwen_Qwen3-4B.aggrefact_other_multi.csv  meta_eval_summary.Qwen_Qwen3-4B.csv  meta_eval_summary.Qwen_Qwen3-4B.diversumm.csv  meta_eval_summary.Qwen_Qwen3-4B.halueval.csv  meta_eval_summary.Qwen_Qwen3-8B.aggrefact_cnn.csv  meta_eval_summary.Qwen_Qwen3-8B.aggrefact_other_multi.csv  meta_eval_summary.Qwen_Qwen3-8B.csv  meta_eval_summary.Qwen_Qwen3-8B.diversumm.csv  meta_eval_summary.Qwen_Qwen3-8B.halueval.csv  meta_eval_summary.allenai_Olmo-3-7B-Instruct.aggrefact_cnn.csv  meta_eval_summary.allenai_Olmo-3-7B-Instruct.aggrefact_other_multi.csv  meta_eval_summary.allenai_Olmo-3-7B-Instruct.diversumm.csv  meta_eval_summary.allenai_Olmo-3-7B-Instruct.halueval.csv  meta_eval_summary.csv  (+26 more)
scripts/: eval.sh  (+12 more)
(+28 files in other folders)
